--- a/pages/my/my.wxml
+++ b/pages/my/my.wxml
@@ -8,7 +8,7 @@
 <view class="list">
   <view class="wallet">
     <view class="name">
-      <view class="icon icon-wallet"></view>
+      <image class="icon" src="/image/me_icon_wallet.png"></image>
       <view>我的钱包</view>
     </view>
     <view class="desc">
@@ -18,4 +18,4 @@
   </view>
 </view>
 
-<tabBar></tabBar>
+<tabBar set-index="{{setIndex}}"></tabBar>
