--- a/pages/water/water.wxss
+++ b/pages/water/water.wxss
@@ -7,12 +7,18 @@ page {
   flex-direction: column;
   align-items: center; }
   .water image {
-    width: 290rpx;
-    height: 290rpx; }
-  .water > view {
-    color: #FFFFFF;
+    width: 300rpx;
+    height: 300rpx;
+    transform: scale(1.3); }
+  .water .quality {
+    color: #498a08;
+    font-size: 100rpx;
     position: absolute;
-    top: 250rpx; }
+    top: 50rpx; }
+  .water .tds {
+    color: #bfbd1f;
+    position: absolute;
+    top: 220rpx; }
 
 .desc {
   padding: 0 30rpx;
@@ -30,6 +36,7 @@ page {
     display: flex;
     justify-content: space-between; }
     .select-water .list .item {
+      box-sizing: border-box;
       display: flex;
       align-items: center;
       flex-direction: column;
@@ -63,5 +70,5 @@ page {
     border-radius: 94rpx;
     text-align: center;
     margin: 50rpx 0 30rpx 0;
-    background-color: #498A08;
+    background-color: #498a08;
     color: #FFFFFF; }
