--- a/pages/water_vip/water_vip.scss
+++ b/pages/water_vip/water_vip.scss
@@ -10,13 +10,20 @@ page {
   flex-direction: column;
   align-items: center;
   image {
-    width: rpx(290);
-    height: rpx(290);
+    width: rpx(300);
+    height: rpx(300);
+    transform: scale(1.3);
   }
-  > view {
-    color: #FFFFFF;
+  .quality {
+    color: $bgColor;
+    font-size: rpx(100);
     position: absolute;
-    top: rpx(250);
+    top: rpx(50);
+  }
+  .tds {
+    color: #bfbd1f;
+    position: absolute;
+    top: rpx(220);
   }
 }
 
