--- a/pages/water_vip/water_vip.wxss
+++ b/pages/water_vip/water_vip.wxss
@@ -7,12 +7,18 @@ page {
   flex-direction: column;
   align-items: center; }
   .water image {
-    width: 290rpx;
-    height: 290rpx; }
-  .water > view {
-    color: #FFFFFF;
+    width: 300rpx;
+    height: 300rpx;
+    transform: scale(1.3); }
+  .water .quality {
+    color: #498a08;
+    font-size: 100rpx;
     position: absolute;
-    top: 250rpx; }
+    top: 50rpx; }
+  .water .tds {
+    color: #bfbd1f;
+    position: absolute;
+    top: 220rpx; }
 
 .desc {
   padding: 0 30rpx;
@@ -59,8 +65,8 @@ page {
     text-align: center; }
   .btn > view:first-child {
     margin: 50rpx 0 30rpx 0;
-    background-color: #498A08;
+    background-color: #498a08;
     color: #FFFFFF; }
   .btn > view:last-child {
-    border: 3rpx solid #498A08;
-    color: #498A08; }
+    border: 3rpx solid #498a08;
+    color: #498a08; }
