--- a/pages/access/access.wxml
+++ b/pages/access/access.wxml
@@ -1,6 +1,6 @@
 <view class="water">
   <image src="/image/access.png"></image>
-  <view class="water-title">授权失败</view>
+  <view class="water-title">授权</view>
   <view class="water-time">拒绝“咕咚饮水”授权，将影响您的饮水计费</view>
 </view>
 
@@ -9,7 +9,7 @@
   <view class="switch">
     <view>获取你的公开信息</view>
     <view>
-      <switch color="#498A08" bindchange="switch"></switch>
+      <switch checked color="#498A08" bindchange="switch"></switch>
     </view>
   </view>
   <view class="desc">点击下方“
@@ -18,4 +18,4 @@
   </view>
 </view>
 
-<button disabled="{{switch}}" class="access-btn" open-type="openSetting">重新授权</button>
+<button disabled="{{switch}}" class="access-btn" open-type="getUserInfo" bindgetuserinfo="userInfo">授权</button>
