--- a/pages/water/water.wxss
+++ b/pages/water/water.wxss
@@ -14,10 +14,12 @@ page {
     color: #498a08;
     font-size: 100rpx;
     position: absolute;
+    left: calc(50% - 45rpx);
     top: 50rpx; }
   .water .tds {
     color: #bfbd1f;
     position: absolute;
+    left: calc(50% - 70rpx);
     top: 220rpx; }
 
 .desc {
