--- a/pages/water_vip/water_vip.scss
+++ b/pages/water_vip/water_vip.scss
@@ -18,11 +18,13 @@ page {
     color: $bgColor;
     font-size: rpx(100);
     position: absolute;
+    left: calc(50% - #{rpx(50)});
     top: rpx(50);
   }
   .tds {
     color: #bfbd1f;
     position: absolute;
+    left: calc(50% - #{rpx(76)});
     top: rpx(220);
   }
 }
