--- a/pages/water_vip/water_vip.wxml
+++ b/pages/water_vip/water_vip.wxml
@@ -29,5 +29,5 @@
 
 <view class="btn-box">
   <view class="btn" bindtap="stopWater">停止取水</view>
-  <navigator url="/pages/my_purse/my_purse" class="btn">去充值</navigator>
+  <navigator url="/pages/my_purse/my_purse" open-type="" class="btn">去充值</navigator>
 </view>
