修复用完水余额更新问题，取水结算页面时间显示问题

--- a/pages/water_over/water_over.wxml
+++ b/pages/water_over/water_over.wxml
@@ -22,7 +22,7 @@
 </view>
 
 <view class="over-btn">
-  <navigator class="btn" open-type="redirect" url="/pages/my_purse/my_purse">去充值</navigator>
+  <navigator class="btn" url="/pages/my_purse/my_purse">去充值</navigator>
   <navigator class="btn" open-type="redirect" url="/pages/index/index">完成</navigator>
 </view>
 
