--- a/pages/water_vip_over/water_vip_over.wxml
+++ b/pages/water_vip_over/water_vip_over.wxml
@@ -28,10 +28,10 @@
 <view class="remind">
   <view>※咕咚饮水提醒：</view>
   <view>
-    支付成功后，请按住机器上的红/蓝按钮出水，其中
+    取水结束后，请按住机器上的红/蓝按钮出水，其中
     <text class="remind-red">红色代表热水</text>
     ，
     <text class="remind-blue">蓝色代表冷水</text>
-    ，松开按钮即停止出水，为了让更多人能及时饮水，在中断出水20S后，设备会自动清零该次饮水信息，谢谢您的理解与配合！
+    ，松开按钮即停止出水，为了让更多人能及时饮水，在中断出水30S后，设备会自动清零该次饮水信息，谢谢您的理解与配合！
   </view>
 </view>
