--- a/pages/my_purse/my_purse.wxml
+++ b/pages/my_purse/my_purse.wxml
@@ -6,13 +6,26 @@
   </view>
 </view>
 
-<view class="recharge">
-  <view class="recharge-title">充值金额：</view>
-  <view class="recharge-enter">
-    <input type="number" bindinput="inputMoney" placeholder="请输入充值金额，最低1元"/>
+<!--<view class="recharge">-->
+<!--<view class="recharge-title">充值金额：</view>-->
+<!--<view class="recharge-enter">-->
+<!--<input type="number" bindinput="inputMoney" placeholder="请输入充值金额，最低1元"/>-->
+<!--</view>-->
+<!--</view>-->
+<view class="select-water">
+  <view class="title">充值金额：</view>
+  <view class="list">
+    <view class="item {{tabIndex===1?'item-selected':''}}" data-price="{{10}}" data-id="{{1}}" bindtap="tab">
+      <view>￥10</view>
+      <view>赠送10元</view>
+    </view>
+
+    <view class="item {{tabIndex===2?'item-selected':''}}"data-price="{{20}}" data-id="{{2}}" bindtap="tab">
+      <view>￥20</view>
+      <view>赠送30元</view>
+    </view>
   </view>
 </view>
-
 
 <view class="btn-box">
   <view class="btn" bindtap="pay">立即充值</view>
