--- a/pages/my_purse/my_purse.wxss
+++ b/pages/my_purse/my_purse.wxss
@@ -35,6 +35,7 @@
       border: 1px solid #ccc; }
 
 .btn-box {
+  margin-top: 200rpx;
   display: flex;
   justify-content: center; }
   .btn-box .btn {
@@ -45,3 +46,36 @@
     text-align: center;
     border-radius: 100rpx;
     background-color: #498a08; }
+
+.select-water {
+  padding: 30rpx; }
+  .select-water .title {
+    font-size: 32rpx;
+    color: #333333; }
+  .select-water .list {
+    margin-top: 50rpx;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap; }
+    .select-water .list .item {
+      margin-bottom: 30rpx;
+      box-sizing: border-box;
+      display: flex;
+      align-items: center;
+      flex-direction: column;
+      justify-content: center;
+      width: 330rpx;
+      height: 115rpx;
+      border-radius: 115rpx;
+      border: 2rpx solid #E0E0E0;
+      font-size: 32rpx; }
+      .select-water .list .item view:first-child {
+        font-weight: bold; }
+      .select-water .list .item view:last-child {
+        font-size: 22rpx;
+        color: #FF8351; }
+    .select-water .list .item-selected {
+      border: 4rpx solid #5E9825;
+      background: rgba(94, 152, 37, 0.15); }
+      .select-water .list .item-selected view {
+        color: #456f1b !important; }
