--- a/components/tabBar/tabBar.wxss
+++ b/components/tabBar/tabBar.wxss
@@ -5,6 +5,7 @@
   box-shadow: 0 -5px 20px 0 rgba(0, 0, 0, 0.03);
   display: flex;
   position: fixed;
+  z-index: 999;
   bottom: 0;
   width: 100%;
   height: 100rpx;
